--- a/package.json
+++ b/package.json
@@ -1,25 +1,14 @@
 {
-  "name": "canvas-template",
-  "version": "1.0.0",
-  "description": "",
-  "main": "webpack.config.js",
+  "name": "canvas-circular",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "gsap": "^1.19.1",
-    "jquery": "^3.4.1",
-    "normalize-css": "^2.3.1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.4.0",
-    "browser-sync": "^2.26.7",
-    "browser-sync-webpack-plugin": "^1.1.4",
-    "webpack": "^2.5.1"
+    "vite": "^7.3.1"
   }
 }
